syntax = "proto3";

option csharp_namespace = "Grpc.Server";

service User {
	rpc GetUsersInGroupList (GetUsersInGroupViewModel) returns (UsersInGroupListViewModel) {}
	rpc GetUsersInGroupStream (GetUsersInGroupViewModel) returns (stream UserInGroupViewModel) {}
	rpc GetUser (GetUserByIdViewModel) returns (UserViewModel) {}
}

message GetUsersInGroupViewModel {
	int32 groupId = 1;
}

message UsersInGroupListViewModel {
	repeated UserInGroupViewModel users = 1;
}

message UserInGroupViewModel {
	int32 id = 1;
	int32 membershipId = 2;
	string firstName = 3;
	string surname = 4;
	string emailAddress = 5;
	enum Role {
		Admin = 0;
		Member = 1;
	}
	Role role = 6;
}

message GetUserByIdViewModel {
	int32 userId = 1;
}

message UserViewModel {
	int32 id = 1;
	string firstName = 2;
	string surname = 3;
	string emailAddress = 4;
}